# artdig

./: .gitignore  .gitmodules  AGENTS.md  EXAMPLE.md  Makefile.py  README.md  SKILL.md  getty.sampleobject.json  pyproject.toml
app/: project.yml
app/ArtDig/: ArtDigApp.swift  Info.plist
app/ArtDig.xcodeproj/: project.pbxproj
app/ArtDig/Models/: ArtworkLink.swift  MetAPIResponse.swift
app/ArtDig/Resources/: guide.css  guide.html
app/ArtDig/Services/: FavoritesManager.swift  FolderAccessManager.swift  MarkdownLinkParser.swift  MetImageService.swift
app/ArtDig/Views/: ArtworkImageView.swift  ContentView.swift  GuideListView.swift  LikedArtworksView.swift  MarkdownWebView.swift
app/ArtDigWidget/: ArtDigWidget.entitlements  ArtDigWidget.swift  ArtDigWidgetBundle.swift  Info.plist
artdig-ts/: index.html  package.json  vite.config.ts
artdig-ts/src/: bridge.ts  index.ts  remark-artworks.ts  types.ts
artdig-ts/src/components/: Artwork.tsx  ArtworkImage.tsx  Carousel.tsx  GuideRenderer.tsx
artdig-ts/src/dev/: App.tsx
artdig-ts/src/hooks/: useBridge.ts  useMetImage.ts
artdig-ts/src/styles/: artwork.css  guide.css
docs/: multi-source-dataset-design.md  nypl-digital-collections-api.md  nypl-illustrated-natural-history.md
src/artdig/: common.py  db.py  schema.py  stats.py
src/artdig/artic/: ingest.py
src/artdig/getty/: ingest.py  linked_art.py
src/artdig/ingest/: getty.py  met.py  nga.py  rijks.py
src/artdig/met/: ingest.py
src/artdig/nga/: ingest.py
src/artdig/nypl/: ingest.py
src/artdig/rijks/: ingest.py  (+1 more)
tests/: test_getty_linked_art.py
